Closed Bug 703882 Opened 13 years ago Closed 13 years ago

crash nsExternalAppHandler::nsExternalAppHandler

Categories

(Core :: DOM: Navigation, defect)

x86
Windows 7
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: wsmwk, Assigned: m_kato)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

second highest crash with MIME in signature This bug was filed from the Socorro interface and is report bp-67669cdf-2b62-4bd1-a56f-df6922111110 . ============================================================= 0 xul.dll nsExternalAppHandler::nsExternalAppHandler uriloader/exthandler/nsExternalHelperAppService.cpp:1256 1 xul.dll nsExternalHelperAppService::DoContent uriloader/exthandler/nsExternalHelperAppService.cpp:853 2 xul.dll nsDocumentOpenInfo::DispatchContent uriloader/base/nsURILoader.cpp:614 3 xul.dll nsDocumentOpenInfo::OnStartRequest uriloader/base/nsURILoader.cpp:294 4 xul.dll nsStreamConverter::FirePendingStartRequest mailnews/mime/src/nsStreamConverter.cpp:1187 5 xul.dll mime_output_fn mailnews/mime/src/mimemoz2.cpp:971 6 xul.dll MimeOptions_write mailnews/mime/src/mimei.cpp:1758 7 xul.dll MimeObject_write mailnews/mime/src/mimei.cpp:1793 8 xul.dll MimeExternalObject_parse_decoded_buffer mailnews/mime/src/mimeeobj.cpp:252 9 xul.dll mime_decode_base64_buffer mailnews/mime/src/mimeenc.cpp:333 10 xul.dll MimeDecoderWrite mailnews/mime/src/mimeenc.cpp:854 11 xul.dll MimeLeaf_parse_buffer mailnews/mime/src/mimeleaf.cpp:179
gExtProtSvc shouldn't have global. This pointer is clear by destructor of nsExternalHelperAppService. But nsExternalAppHandler may still use it.
Component: General → Document Navigation
Product: Thunderbird → Core
QA Contact: general → docshell
Attached patch fixSplinter Review
Assignee: nobody → m_kato
Attachment #587639 - Flags: review?(bzbarsky)
Attachment #587639 - Flags: review?(bzbarsky) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [inbound]
Target Milestone: --- → mozilla12
Crash Signature: [@ nsExternalAppHandler::nsExternalAppHandler(nsIMIMEInfo*, nsACString_internal const&, nsIInterfaceRequestor*, nsAString_internal const&, unsigned int, int)] → [@ nsExternalAppHandler::nsExternalAppHandler(nsIMIMEInfo*, nsACString_internal const&, nsIInterfaceRequestor*, nsAString_internal const&, unsigned int, int)] [@ nsExternalAppHandler::nsExternalAppHandler(nsIMIMEInfo*, nsACString_internal const& nsIInter…
Crash Signature: nsIInterfaceRequestor*, nsAString_internal const&, unsigned int, bool)] → nsIInterfaceRequestor*, nsAString_internal const&, unsigned int, bool)] [@ nsExternalAppHandler::nsExternalAppHandler]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: