Bug 703882 - crash nsExternalAppHandler::nsExternalAppHandler. r=bz